--- a/config/.env
+++ b/config/.env
@@ -5,8 +5,8 @@ NEO4J_PASSWORD = "password"
 
 # LLM configs
 LLM_API_KEY = "dummy"
-LLM_BASE_URL = "http://203.57.40.232:10288/v1"
-LLM_MODEL = "Qwen/Qwen3-30B-A3B"
+LLM_BASE_URL = "http://localhost:11434/v1"
+LLM_MODEL = "qwen3:1.7b"
 
 # Embedder configs
 EMBEDDER_API_KEY = "dummy"
