fix async issues

--- a/config/.env
+++ b/config/.env
@@ -5,8 +5,8 @@ NEO4J_PASSWORD = "password"
 
 # LLM configs
 LLM_API_KEY = "dummy"
-LLM_BASE_URL = "http://localhost:11434/v1"
-LLM_MODEL = "qwen3:1.7b"
+LLM_BASE_URL = "http://64.62.194.197:20703/v1"
+LLM_MODEL = "qwen3:30b"
 
 # Embedder configs
 EMBEDDER_API_KEY = "dummy"
